# ticker-tracker

./: .gitignore  Makefile  README.md  SECURITY.md  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: multi_currency.md
tests/: test_calculator.py  test_currency.py  test_encrypted_config.py  test_engine.py  test_exchange_map.py  test_finance_adapters.py  test_fx_adapters.py  test_google_auth.py  test_google_drive_gmail.py  test_google_sheets.py  test_google_sheets_currency_override.py  test_launcher.py  test_local_holdings.py  test_report_builder.py  test_setup_core.py  test_setup_web.py  test_show_config.py  test_startup_registration.py
ticker_tracker/: __init__.py  __main__.py  calculator.py  config.py  engine.py  exchange_map.py  launcher.py  local_holdings.py  main.py  report_builder.py  setup_core.py  setup_help.py  setup_wizard.py  show_config.py
ticker_tracker/currency/: __init__.py  iso4217.py  market_currency.py
ticker_tracker/finance/: __init__.py  alphavantage_adapter.py  base.py  finnhub_adapter.py  registry.py  twelvedata_adapter.py  yfinance_adapter.py
ticker_tracker/fx/: __init__.py  base.py  forex_python.py  frankfurter.py  open_exchange_rates.py  registry.py
ticker_tracker/google/: __init__.py  auth.py  drive.py  gmail.py  sheets.py
ticker_tracker/ui/: __init__.py  popup.py  startup_registration.py
ticker_tracker/web/: __init__.py  setup_server.py
ticker_tracker/web/templates/: setup.html  show_config.html
